--- a/Game Of Life/index.html
+++ b/Game Of Life/index.html
@@ -8,10 +8,11 @@
 
 <body>
 
-    <div id="game-container">
-    </div>
+    <div id="game-container"> </div>
+    <script type="module" src="script.js"></script>
 
-    <script src="script.js"></script>
 </body>
 
 </html>
+
+<!--python -m http.server-->
