--- a/Game Of Life/index.html
+++ b/Game Of Life/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+
 <html lang="dk">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Game Of Life</title>
     <link rel="Stylesheet" href="style.css">
 </head>
