--- a/Game Of Life/index.html
+++ b/Game Of Life/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <div id="navbar"></div>
     <div id="game-container"> </div>
     <script type="module" src="script.js"></script>
 
